Add tint colouring and hide status bar

--- a/DevStat/Base.lproj/Main.storyboard
+++ b/DevStat/Base.lproj/Main.storyboard
@@ -33,6 +33,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="separatorColor" red="0.0" green="0.90196078431372551" blue="0.46274509803921571" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="StatItemCell" textLabel="LhM-nt-ZNL" detailTextLabel="Xs2-18-J7T" style="IBUITableViewCellStyleValue1" id="euL-vU-3z5">
                                 <autoresizingMask key="autoresizingMask"/>
@@ -74,6 +75,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="separatorColor" red="0.0" green="0.90196078430000004" blue="0.46274509800000002" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="StatItemCell" textLabel="4gH-mR-Lje" detailTextLabel="tnl-ky-SPJ" style="IBUITableViewCellStyleValue1" id="Ziz-aS-DQ6">
                                 <autoresizingMask key="autoresizingMask"/>
